Closed Bug 168064 Opened 23 years ago Closed 23 years ago

MRJPluginCarbon crashes if ~/Library/Logs doesn't exist

Categories

(Core Graveyard :: Java: OJI, defect)

PowerPC
macOS
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.2

People

(Reporter: beard, Assigned: beard)

Details

(Keywords: crash, topembed+, Whiteboard: [adt3])

Attachments

(1 file)

Now why would that never exist? If an end user doesn't have Crash Reporter turned on for one. Doh! Patching coming up.
This patch adds additional JNI exception handling in the case that MRJSession.open() generates an exception, and adds code to create the directories that don't exist along the console path (i.e. ~/Library/Logs).
+ if (!parentFile.exists()) { + parentFile.mkdirs(); + } could this also throw an exception that crashes?
Yes, that code could still throw exceptions, and the code which checks for these exceptions is in the patch to MRJSession.cpp.
Status: NEW → ASSIGNED
Keywords: topembedreview
Comment on attachment 98787 [details] [diff] [review] Check JNI exceptions, create ~/Library/Logs if necessary r=bnesse.
Attachment #98787 - Flags: review+
Comment on attachment 98787 [details] [diff] [review] Check JNI exceptions, create ~/Library/Logs if necessary sr=sfraser
Attachment #98787 - Flags: superreview+
Fixes checked into trunk.
Comment on attachment 98787 [details] [diff] [review] Check JNI exceptions, create ~/Library/Logs if necessary a=rjesup@wgate.com for 1.0 branch checkin. Change mozilla1.0.2+ to fixed1.0.2 when checked in
Attachment #98787 - Flags: approval+
Target Milestone: --- → mozilla1.0.2
Fixes checked into 1.0 and chimera branches.
Blocks: 150046
pmac: pls verify this as fixed on the 1.0 branch, then replace "fixed1.0.2" with "verified1.0.2". thanks!
Whiteboard: [adt3]
Patrick, should this bug be RESOLVED FIXED? Looks like you checked in
Should this land on the 1.1 branch too?
Please verify the bug. Once verified, change the keyword fixed1.0.2 to verified1.0.2
Verified the patch.
Verified the patch on the trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified.
Status: RESOLVED → VERIFIED
No longer blocks: 150046
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: