Fix for bug #168064, crash when ~/Library/Logs doesn't exist. r=bnesse, sr=sfraser